--- a/NebulaEngine/NebulaEngine.vcxproj
+++ b/NebulaEngine/NebulaEngine.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="level.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="NebulaEngine.cpp" />
+    <ClCompile Include="shader.cpp" />
     <ClCompile Include="testlevel.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -152,8 +153,13 @@
     <ClInclude Include="level.h" />
     <ClInclude Include="libs.h" />
     <ClInclude Include="mesh.h" />
+    <ClInclude Include="shader.h" />
     <ClInclude Include="structs.h" />
     <ClInclude Include="testlevel.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\FragmentShader.glsl" />
+    <None Include="Shaders\VertexShader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
