--- a/NebulaEngine/NebulaEngine.vcxproj
+++ b/NebulaEngine/NebulaEngine.vcxproj
@@ -159,7 +159,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\FragmentShader.glsl" />
+    <None Include="Shaders\FS_Grid.glsl" />
     <None Include="Shaders\VertexShader.glsl" />
+    <None Include="Shaders\VS_Grid.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
