--- a/NebulaEngine/NebulaEngine.vcxproj.filters
+++ b/NebulaEngine/NebulaEngine.vcxproj.filters
@@ -73,5 +73,11 @@
     <None Include="Shaders\VertexShader.glsl">
       <Filter>Source Files\Shaders</Filter>
     </None>
+    <None Include="Shaders\FS_Grid.glsl">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\VS_Grid.glsl">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
