Implemented 3D math module

--- a/NebulaEngine/NebulaEngine.vcxproj
+++ b/NebulaEngine/NebulaEngine.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="shader.h" />
     <ClInclude Include="structs.h" />
     <ClInclude Include="testlevel.h" />
+    <ClInclude Include="transform.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\FragmentShader.glsl" />
