--- a/NebulaEngine/NebulaEngine.vcxproj.filters
+++ b/NebulaEngine/NebulaEngine.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\FragmentShader.glsl">
