--- a/NebulaEngine/NebulaEngine.vcxproj
+++ b/NebulaEngine/NebulaEngine.vcxproj
@@ -161,11 +161,12 @@
     <ClInclude Include="transform.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Meshes\Suzanne.fbx" />
     <None Include="Shaders\FragmentShader.glsl" />
     <None Include="Shaders\FS_Grid.glsl" />
+    <None Include="Shaders\FS_Phong.glsl" />
     <None Include="Shaders\VertexShader.glsl" />
     <None Include="Shaders\VS_Grid.glsl" />
+    <None Include="Shaders\VS_Phong.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
