--- a/NebulaEngine/NebulaEngine.vcxproj.filters
+++ b/NebulaEngine/NebulaEngine.vcxproj.filters
@@ -91,8 +91,11 @@
     <None Include="Shaders\VS_Grid.glsl">
       <Filter>Source Files\Shaders</Filter>
     </None>
-    <None Include="Resources\Meshes\Suzanne.fbx">
-      <Filter>Resource Files\Meshes</Filter>
+    <None Include="Shaders\FS_Phong.glsl">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\VS_Phong.glsl">
+      <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
 </Project>
