Added color attribute to Vertex struct; Created vertex color shader; added demonstrations in the test level scene for various transformations, shaders and lights

--- a/NebulaEngine/NebulaEngine.vcxproj
+++ b/NebulaEngine/NebulaEngine.vcxproj
@@ -165,10 +165,12 @@
     <None Include="Shaders\FS_BaseColor.glsl" />
     <None Include="Shaders\FS_Grid.glsl" />
     <None Include="Shaders\FS_Phong.glsl" />
+    <None Include="Shaders\FS_VertexColor.glsl" />
     <None Include="Shaders\VertexShader.glsl" />
     <None Include="Shaders\VS_BaseColor.glsl" />
     <None Include="Shaders\VS_Grid.glsl" />
     <None Include="Shaders\VS_Phong.glsl" />
+    <None Include="Shaders\VS_VertexColor.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
