--- a/NebulaEngine/NebulaEngine.vcxproj.filters
+++ b/NebulaEngine/NebulaEngine.vcxproj.filters
@@ -103,5 +103,11 @@
     <None Include="Shaders\VS_BaseColor.glsl">
       <Filter>Source Files\Shaders</Filter>
     </None>
+    <None Include="Shaders\FS_VertexColor.glsl">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\VS_VertexColor.glsl">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
